# flexflow-third-party

./: .gitignore  .gitmodules  CMakeLists.txt  placeholder.cpp
.github/workflows/: build.yml
.github/workflows/helpers/: download_nccl.sh  install_dependencies.sh
cmake/: cuda.cmake  gasnet.cmake  legion.cmake  nccl.cmake  protobuf.cmake  utils.cmake
config/: config.inc  config.linux
